fix: overflowing toast buttons

--- a/Frontend/src/app/core-ui-module/components/toast-message/toast-message.component.scss
+++ b/Frontend/src/app/core-ui-module/components/toast-message/toast-message.component.scss
@@ -7,6 +7,7 @@
     width: 100%;
     padding: 0 20px;
     > button {
+        flex-shrink: 0;
         font-weight: bold;
         color: #fff;
     }
